--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.5",
-    "@angular/cli": "^10.0.3",
+    "@angular/cli": "^9.0.6",
     "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "~9.0.5",
     "@types/jasmine": "~3.5.0",
